--- a/src/TobnysWebsite/Views/Home/About.cshtml
+++ b/src/TobnysWebsite/Views/Home/About.cshtml
@@ -1,7 +1,79 @@
 ﻿@{
     ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+            <div class="box1">
+                <h2>About</h2>
+                <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ut commodo nisl, at lobortis arcu. Quisque eros nunc, faucibus pretium turpis at, pretium consequat risus. Phasellus rhoncus nunc sed neque lacinia feugiat. Vestibulum tristique erat nisl, in mollis libero dapibus sed. Nulla facilisi. Proin ultricies interdum lacus nec auctor. Aenean vel erat nibh. Donec eu urna eros. Nam sit amet gravida nisi. Phasellus sit amet sapien sapien.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+            <div class="box1">
+                <h2>Skillset</h2>
+                <p style="text-align: center; padding-bottom: 50px;">I have a long list of different skills due to my passion of development in general, these skills are listed below.</p>
+
+                <row>
+                    <div class="col-md-4">
+                        <img class="img1 img-responsive" src="~/images/HTML5_Logo_512.png" />
+                        <p id="logoText">HTML5</p>
+                    </div>
+
+                    <div class="col-md-4">
+                        <img class="img1 img-responsive" src="~/images/css3-logo.png" />
+                        <p id="logoText">CSS3</p>
+                    </div>
+
+                    <div class="col-md-4">
+                        <img class="img1 img-responsive" src="~/images/Mmww2.png" />
+                        <p id="logoText">JavaScript</p>
+                    </div>
+                </row>
+
+                <div class="separateLogo">
+                    <row>
+                        <div class="col-md-4">
+                            <img class="img2 img-responsive" src="~/images/C-Logo-1.jpg" />
+                            <p id="logoText">C#</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <img class="img1 img-responsive" src="~/images/aspnet.png" />
+                            <p id="logoText">ASP.NET Core</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <img class="img1 img-responsive" src="~/images/bootstrap-logo-vector-download.jpg" />
+                            <p id="logoText">Bootstrap 3+</p>
+                        </div>
+                    </row>
+                </div>
+
+                <div class="separateLogo">
+                    <row>
+                        <div class="col-md-4">
+                            <img class="img3 img-responsive" src="~/images/azure.png" />
+                            <p id="logoText">Microsoft Azure</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <img class="img1 img-responsive" src="~/images/photoshop-1065296_960_720.jpg" />
+                            <p id="logoText">Photoshop</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <img class="img1 img-responsive" src="~/images/git.jpg" />
+                            <p id="logoText">Git</p>
+                        </div>
+                    </row>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
