Fixed routing and added animations amongst other minor things.

--- a/src/TobnysWebsite/Views/Shared/_Layout.cshtml
+++ b/src/TobnysWebsite/Views/Shared/_Layout.cshtml
@@ -50,8 +50,8 @@
         <footer>
             <row>
                 <div class="col-sm-4">
-                    <p>+46 (0) 70 677 3004</p>
-                    <p>tobnystrom@gmail.com</p>
+                    <a href="tel:+46706773004" id="footerLinks"><p>+46 (0) 70 677 3004</p></a>
+                    <a href="mailto:tobnystrom@gmail.com" id="footerLinks"><p>tobnystrom@gmail.com</p></a>
                 </div>
                 <div class="col-sm-4">
                     <p>&copy; 2017 - Tobias Nyström</p>
