--- a/src/TobnysWebsite/Views/Home/Contact.cshtml
+++ b/src/TobnysWebsite/Views/Home/Contact.cshtml
@@ -4,27 +4,30 @@
 
 <div class="container-fluid">
     <div class="row">
-        <h2>Contact</h2>
-        <p style="text-align: center;">Questions? Feel free to contact me personally using the format below.</p>
         <div class="col-sm-6 col-sm-offset-3">
+            <div class="box1">
+                <h2>Contact</h2>
+                <p style="text-align: center; padding-bottom: 50px;">Questions? Feel free to contact me personally using the format below.</p>
+            </div>
+
             <div class="con-form" id="contactForm">
-                    <div class="well">
-                        <form method="post">
-                            <div class="form-group">
-                                <label>Name:</label> <input class="form-control" id="name" placeholder="Your name" type="text"> <span class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label>E-mail:</label> <input class="form-control" id="email" placeholder="Your e-mail adress" type="email"> <span class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label>Phone:</label> <input class="form-control" id="tele" placeholder="Your phone number" type="number"> <span class="text-danger"></span>
-                            </div>
-                            <div class="form-group">
-                                <label>Message:</label>
-                                <textarea class="form-control" id="message" placeholder="Your message" rows="4"></textarea> <span class="text-danger"></span>
-                            </div><button class="btn btn-default center-block" id="msgBtn" type="submit">Send</button>
-                        </form>
-                    </div>
+                <div class="well">
+                    <form method="post">
+                        <div class="form-group">
+                            <label>Name:</label> <input class="form-control" id="name" placeholder="Your name" type="text"> <span class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label>E-mail:</label> <input class="form-control" id="email" placeholder="Your e-mail adress" type="email"> <span class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label>Phone:</label> <input class="form-control" id="tele" placeholder="Your phone number" type="number"> <span class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label>Message:</label>
+                            <textarea class="form-control" id="message" placeholder="Your message" rows="4"></textarea> <span class="text-danger"></span>
+                        </div><button class="btn btn-default center-block" id="msgBtn" type="submit">Send</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
