--- a/src/TobnysWebsite/Views/Home/Portfolio.cshtml
+++ b/src/TobnysWebsite/Views/Home/Portfolio.cshtml
@@ -8,28 +8,27 @@
             <div class="box1">
                 <h2>Portfolio</h2>
                 <p style="text-align: center;">My various projects will be listed here, for further information or inquiries please feel free to contact me.</p>
+                <p style="text-align: center; padding-bottom: 50px;">Click on any of the pictures to be sent to the project.</p>
 
                 <row>
-                    <div class="col-md-4">
-                        <a href="http://mirrorarbprov.azurewebsites.net">
-                            <img class="projImg1 img-responsive" src="~/images/8cda87b5dabeff72d42ae0868d457ffc.png" />
-                        </a>
-                        <p id="logoText">mKey</p>
+                    <div class="col-md-6">
+                        <div class="projImg1">
+                            <a asp-area="" asp-controller="portfolio" asp-action="tobnys">
+                                <img class="img-responsive" id="fixedImg" src="~/images/851c46e7451b0870ee212c1580c5d5c8.png" />
+                                <span class="text-content"><span>Website | "Tobnys"</span></span>
+                            </a>
+                        </div>
                     </div>
 
-                    <div class="col-md-4">
-                        <a href="http://mirrorarbprov.azurewebsites.net">
-                            <img class="projImg1 img-responsive" src="~/images/8cda87b5dabeff72d42ae0868d457ffc.png" />
-                        </a>
-                        <p id="logoText">mKey</p>
+                    <div class="col-md-6">
+                        <div class="projImg1">
+                            <a asp-area="" asp-controller="portfolio" asp-action="mkey">
+                                <img class="img-responsive" id="fixedImg" src="~/images/8cda87b5dabeff72d42ae0868d457ffc.png" />
+                                <span class="text-content"><span>Website | "mKey"</span></span>
+                            </a>
+                        </div>
                     </div>
 
-                    <div class="col-md-4">
-                        <a href="http://mirrorarbprov.azurewebsites.net">
-                            <img class="projImg1 img-responsive" src="~/images/8cda87b5dabeff72d42ae0868d457ffc.png" />
-                        </a>
-                        <p id="logoText">mKey</p>
-                    </div>
                 </row>
 
             </div>
