Major redesign and updates.

--- a/src/TobnysWebsite/Views/Home/Contact.cshtml
+++ b/src/TobnysWebsite/Views/Home/Contact.cshtml
@@ -7,27 +7,24 @@
         <div class="col-sm-6 col-sm-offset-3">
             <div class="box1">
                 <h2>Contact</h2>
-                <p style="text-align: center; padding-bottom: 50px;">Questions? Feel free to contact me personally using the format below.</p>
+                <p style="text-align: center; padding-bottom: 30px;">Questions? Feel free to contact me personally using the format below.</p>
             </div>
-
-            <div class="con-form" id="contactForm">
-                <div class="well">
-                    <form method="post">
-                        <div class="form-group">
-                            <label>Name:</label> <input class="form-control" id="name" placeholder="Your name" type="text"> <span class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label>E-mail:</label> <input class="form-control" id="email" placeholder="Your e-mail adress" type="email"> <span class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label>Phone:</label> <input class="form-control" id="tele" placeholder="Your phone number" type="number"> <span class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label>Message:</label>
-                            <textarea class="form-control" id="message" placeholder="Your message" rows="4"></textarea> <span class="text-danger"></span>
-                        </div><button class="btn btn-default center-block" id="msgBtn" type="submit">Send</button>
-                    </form>
+            
+            <div class="inner-container">
+                <div class="col-lg-4">
+                    <h3>Telephone</h3>
+                    <a href="tel:+46706773004" id="links"><p>+46 (0) 70 677 3004</p></a>
                 </div>
+
+                <div class="col-lg-4">
+                    <h3>E-mail</h3>
+                    <a href="mailto:tobnystrom@gmail.com" id="links"><p>tobnystrom@gmail.com</p></a>
+                </div>
+
+                <div class="col-lg-4">
+                    <h3>Other</h3>
+                    <a href="https://www.github.com/tobnys" target="_blank"><i class="fa fa-github" id="socialMediaIcons"></i></a> <a href="https://www.linkedin.com/in/tobias-nystr%C3%B6m-54b429124/" target="_blank"><i class="fa fa-linkedin" id="socialMediaIcons"></i></a>
+</div>
             </div>
         </div>
     </div>
