--- a/src/TobnysWebsite/Views/Home/Portfolio.cshtml
+++ b/src/TobnysWebsite/Views/Home/Portfolio.cshtml
@@ -11,20 +11,22 @@
                 <p style="text-align: center; padding-bottom: 50px;">Click on any of the pictures to be sent to the project.</p>
 
                 <row>
-                    <div class="col-md-6">
+                    <div class="col-lg-6" id="imgfix">
                         <div class="projImg1">
                             <a asp-area="" asp-controller="portfolio" asp-action="tobnys">
                                 <img class="img-responsive" id="fixedImg" src="~/images/851c46e7451b0870ee212c1580c5d5c8.png" />
-                                <span class="text-content"><span>Website | "Tobnys"</span></span>
+                                <span class="text-content"><span>"Tobnys"</span></span>
+                                <span class="label label-primary">Website</span>
                             </a>
                         </div>
                     </div>
 
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="projImg1">
                             <a asp-area="" asp-controller="portfolio" asp-action="mkey">
                                 <img class="img-responsive" id="fixedImg" src="~/images/8cda87b5dabeff72d42ae0868d457ffc.png" />
-                                <span class="text-content"><span>Website | "mKey"</span></span>
+                                <span class="text-content"><span>"mKey"</span></span>
+                                <span class="label label-primary">Website</span>
                             </a>
                         </div>
                     </div>
