--- a/src/TobnysWebsite/Views/Home/About.cshtml
+++ b/src/TobnysWebsite/Views/Home/About.cshtml
@@ -7,7 +7,9 @@
         <div class="col-sm-6 col-sm-offset-3">
             <div class="box1">
                 <h2>About</h2>
-                <p style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ut commodo nisl, at lobortis arcu. Quisque eros nunc, faucibus pretium turpis at, pretium consequat risus. Phasellus rhoncus nunc sed neque lacinia feugiat. Vestibulum tristique erat nisl, in mollis libero dapibus sed. Nulla facilisi. Proin ultricies interdum lacus nec auctor. Aenean vel erat nibh. Donec eu urna eros. Nam sit amet gravida nisi. Phasellus sit amet sapien sapien.</p>
+                <hr id="titlehr" />
+                <p style="text-align: center;">My name is Tobias Nyström and I am an aspiring web developer currently in pursuit of a junior position within web development. I am self-taught from scratch with roots in Microsofts .NET stack, my strength is within design and front-end due to years of graphical design and video editing in my spare time.</p>
+                <p>In terms of my interests I am leaning towards back-end development as it is very fun to me. I do however aspire to become a full-stack developer so that I can combine both back-end and front-end.</p>
             </div>
         </div>
     </div>
@@ -16,6 +18,7 @@
         <div class="col-sm-6 col-sm-offset-3">
             <div class="box1">
                 <h2>Skillset</h2>
+                <hr id="titlehr" />
                 <p style="text-align: center; padding-bottom: 50px;">I have a long list of different skills due to my passion of development in general, these skills are listed below.</p>
 
                 <row>
