--- a/src/TobnysWebsite/Views/Home/Contact.cshtml
+++ b/src/TobnysWebsite/Views/Home/Contact.cshtml
@@ -7,24 +7,28 @@
         <div class="col-sm-6 col-sm-offset-3">
             <div class="box1">
                 <h2>Contact</h2>
-                <p style="text-align: center; padding-bottom: 30px;">Questions? Feel free to contact me personally using the format below.</p>
+                <hr id="titlehr"/>
+                <p style="text-align: center; padding-bottom: 30px;">Questions? Feel free to contact me personally using the information below.</p>
             </div>
             
             <div class="inner-container">
                 <div class="col-lg-4">
                     <h3>Telephone</h3>
+                    <hr id="titlehr" />
                     <a href="tel:+46706773004" id="links"><p>+46 (0) 70 677 3004</p></a>
                 </div>
 
                 <div class="col-lg-4">
                     <h3>E-mail</h3>
+                    <hr id="titlehr" />
                     <a href="mailto:tobnystrom@gmail.com" id="links"><p>tobnystrom@gmail.com</p></a>
                 </div>
 
                 <div class="col-lg-4">
                     <h3>Other</h3>
+                    <hr id="titlehr" />
                     <a href="https://www.github.com/tobnys" target="_blank"><i class="fa fa-github" id="socialMediaIcons"></i></a> <a href="https://www.linkedin.com/in/tobias-nystr%C3%B6m-54b429124/" target="_blank"><i class="fa fa-linkedin" id="socialMediaIcons"></i></a>
-</div>
+                </div>
             </div>
         </div>
     </div>
