--- a/src/TobnysWebsite/Views/Home/Index.cshtml
+++ b/src/TobnysWebsite/Views/Home/Index.cshtml
@@ -7,8 +7,34 @@
         <div class="col-sm-6 col-sm-offset-3">
             <div class="box1">
                 <h2>Welcome</h2>
+                <hr id="titlehr" />
                 <p style="text-align: center;">This website was created as a personal showcase directed towards anyone interested.</p>
                 <p style="text-align: center;">Use the navigation bar above to view the different sections on the site.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="container">
+                <div class="row box1">
+                    <div class="col-sm-6">
+                        <h3>About this website</h3>
+                        <hr id="titlehr" />
+                        <p>The creation of this website was due to me (Tobias Nyström) being in need of a new personal website to showcase myself and my projects to whoever finds it interesting.</p>
+                        <p>This website is also open-source, check it out on my <a href="https://www.github.com/tobnys/tobnys" target="_blank">GitHub</a>  page!</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <h3>Creation</h3>
+                        <hr id="titlehr" />
+                        <p>Design-wise the website was supposed to be "big" and "accessible". That means (in my head) readable text, big containers</p>
+                        <p>The site currently has no bigger back-end functions other than basic routing and similar functionality on the .NET stack. In the future I plan to build some form of admin dashboard to this site that I can experiment with.</p>
+                        <p>The following technologies was used:</p>
+                        <p>- HTML5<br />- CSS3<br />- ASP.NET MVC (Core)<br />- Microsoft Azure</p>
+                       </div>
+                </div>
             </div>
         </div>
     </div>
