--- a/src/TobnysWebsite/Views/Home/Portfolio.cshtml
+++ b/src/TobnysWebsite/Views/Home/Portfolio.cshtml
@@ -7,6 +7,7 @@
         <div class="col-sm-6 col-sm-offset-3">
             <div class="box1">
                 <h2>Portfolio</h2>
+                <hr id="titlehr" />
                 <p style="text-align: center;">My various projects will be listed here, for further information or inquiries please feel free to contact me.</p>
                 <p style="text-align: center; padding-bottom: 50px;">Click on any of the pictures to be sent to the project.</p>
 
@@ -14,18 +15,41 @@
                     <div class="col-lg-6" id="imgfix">
                         <div class="projImg1">
                             <a asp-area="" asp-controller="portfolio" asp-action="tobnys">
-                                <img class="img-responsive" id="fixedImg" src="~/images/851c46e7451b0870ee212c1580c5d5c8.png" />
+                                <img class="img-responsive" id="fixedImg" src="~/images/4cb6b057b319683cfa7ce63e6440964f.png" />
                                 <span class="text-content"><span>"Tobnys"</span></span>
                                 <span class="label label-primary">Website</span>
                             </a>
                         </div>
                     </div>
 
-                    <div class="col-lg-6">
+                    <div class="col-lg-6" id="imgfix">
                         <div class="projImg1">
                             <a asp-area="" asp-controller="portfolio" asp-action="mkey">
                                 <img class="img-responsive" id="fixedImg" src="~/images/8cda87b5dabeff72d42ae0868d457ffc.png" />
                                 <span class="text-content"><span>"mKey"</span></span>
+                                <span class="label label-primary">Website</span>
+                            </a>
+                        </div>
+                    </div>
+
+                </row>
+
+                <row>
+                    <div class="col-lg-6" id="imgfix">
+                        <div class="projImg1">
+                            <a asp-area="" asp-controller="portfolio" asp-action="tobnys">
+                                <img class="img-responsive" id="fixedImg" src="" />
+                                <span class="text-content"><span>Upcoming project!</span></span>
+                                <span class="label label-primary">Website</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6" id="imgfix">
+                        <div class="projImg1">
+                            <a asp-area="" asp-controller="portfolio" asp-action="mkey">
+                                <img class="img-responsive" id="fixedImg" src="" />
+                                <span class="text-content"><span>Upcoming project</span></span>
                                 <span class="label label-primary">Website</span>
                             </a>
                         </div>
