--- a/src/TobnysWebsite/Views/Shared/_Layout.cshtml
+++ b/src/TobnysWebsite/Views/Shared/_Layout.cshtml
@@ -45,11 +45,18 @@
     <div class="container-fluid body-content">
         @RenderBody()
     </div>
-    <hr />
-    <div class="footer">
-        <footer id="footer">
+    <div class="container" id="footer">
+        <footer>
             <row>
-                <div class="col-sm-12">
+                <br />
+                <div class="col-sm-2 col-sm-offset-5" style="margin-top: 3%;">
+                    <a href="https://www.github.com/tobnys" target="_blank"><i class="fa fa-github" id="socialMediaIconsFooter"></i></a> 
+                    <a href="https://www.linkedin.com/in/tobias-nystr%C3%B6m-54b429124/" target="_blank"><i class="fa fa-linkedin" id="socialMediaIconsFooter"></i></a>
+                    <a href="mailto:tobnystrom@gmail.com" target="_blank"><i class="fa fa-envelope" id="socialMediaIconsFooter"></i></a>
+                    <a href="tel:+46706773004" target="_blank"><i class="fa fa-phone" id="socialMediaIconsFooter"></i></a>
+                    <hr style="width: 75%;"/>
+                </div>
+                <div class="col-sm-12" style="margin-top: 1%;">
                     <p>&copy; 2017 - Tobias Nyström</p>
                 </div>
             </row>
