--- a/src/TobnysWebsite/wwwroot/css/style.css
+++ b/src/TobnysWebsite/wwwroot/css/style.css
@@ -1,11 +1,18 @@
-﻿body
+﻿html, body
 {
     font-family: 'Source Sans Pro', sans-serif;
+    background-color: white;
+    height: 100%;
+}
+body
+{
+    position: relative;
 }
 .container-fluid
 {
     padding: 0;
     width: 100%;
+    background-color: white;
 }
 .row
 {
@@ -134,19 +141,20 @@ h3
   }
 }
 
-
-.footer
+#footer
 {
-    background: white;
+    background-color: #373a3d;
+    width: 100%;
+    height: 250px;
     text-align: center;
-    padding-left: 20%;
-    padding-right: 20%;
+    margin-top: 100px;
 }
 
-.footer p
+#footer p
 {
-    color: black;
+    color: white;
     font-weight: bold;
+    text-align: center;
 }
 
 .box1
@@ -161,6 +169,43 @@ h3
 {
     font-size: 18px;
     font-weight: bold;
+    color: #373a3d;
+}
+
+.box1 a
+{
+    font-size: 18px;
+    font-weight: bold;
+    color: #53d1cb;
+    text-decoration: none;
+    transition: text-shadow 0.1s, color 0.3s;
+}
+
+.box1 a:hover
+{
+    color: #373a3d;
+    text-shadow: 0 0 1px;
+}
+
+.box2
+{
+    height: 100%;
+	width: 100%;
+    padding-top: 10px;
+    background-color: #373a3d;
+    margin-bottom: 10px;
+}
+
+.box2 p
+{
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+}
+
+.box2 h2
+{
+    color: white;
 }
 
 #socialMediaIcons
@@ -179,14 +224,19 @@ h3
     color: #53d1cb;
 }
 
-hr 
+#socialMediaIconsFooter
 {
-  border: 0;
-  width: 100%;               
-  background-color: black;
-  height: 2px;
-  margin-top: 3%;
-  opacity: 0.7;
+	color: #53d1cb;
+	font-size: 40px;
+	margin: 5px;
+	text-align: center;
+    transition: color 0.5s;
+    font-style: normal;
+}
+
+#socialMediaIconsFooter:hover
+{
+    color: white;
 }
 
 .img1
@@ -300,6 +350,8 @@ span.text-content:hover
 .inner-container
 {
     text-align: center;
+    padding-bottom: 300px;
+    padding-top: 100px;
 }
 
 .inner-container a
@@ -314,6 +366,7 @@ span.text-content:hover
     text-decoration: none;
     font-weight: bold;
     color: black;
+    padding-top: 10px;
 }
 
 .inner-container p:hover
@@ -342,7 +395,7 @@ span.text-content:hover
 
 @keyframes container-fluid 
 {
-    from { opacity: 0; filter: blur(3px); padding-top: 100px;}
+    from { opacity: 0; filter: blur(3px); padding-top: 200px;}
     to { opacity: 1; filter: blur(0px); padding-top: 0;}
 }
 
@@ -350,7 +403,7 @@ span.text-content:hover
 {
     position: absolute;
     right: 198px;
-    top: 0px;
+    top: 0;
     background: #53d1cb;
     text-align: center;
     color: white;
@@ -362,8 +415,35 @@ span.text-content:hover
     background-color: #373a3d;
 }
 
+@media only screen and (max-width: 1200px) {
+    #imgfix
+    {
+        padding-bottom: 60px;
+    }
+}
+
 #imgfix
 {
     padding-bottom: 60px;
 }
 
+.box1 hr
+{
+    position: relative;
+    width: 20%;               
+    background-color: #53d1cb;
+    height: 3px;
+    margin-top: -2%;
+    opacity: 0.7;
+}
+
+.inner-container hr
+{
+    position: relative;
+    width: 35%;               
+    background-color: #53d1cb;
+    height: 3px;
+    margin-top: -2%;
+    opacity: 0.7;
+    margin-bottom: 10px;
+}
